# DuTop

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PRD.md  README.md
.github/workflows/: release.yml
docs/: distribution.md
src/: format.rs  lib.rs  main.rs  output.rs
tests/: benchmark.sh
